--- a/src/storage-service-client/src/app/pages/details-page/details-page.html
+++ b/src/storage-service-client/src/app/pages/details-page/details-page.html
@@ -1,1 +1,6 @@
+<div class="button__wrapper">
+  <button matButton="filled" color="primary" (click)="openCreateDetailPopup()">
+    Add detail
+  </button>
+</div>
 <app-details-list></app-details-list>
