--- a/src/storage-service-client/src/app/shared/components/footer/footer.html
+++ b/src/storage-service-client/src/app/shared/components/footer/footer.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<div class="footer__wrapper">
+  <footer class="footer">
+    <div>
+      <img ngSrc="assets/github_icon.png" alt="github" height="20" width="20">
+      <a href="https://github.com/ilya1004/StorageServiceApplication" target="_blank" style="padding: 0 0 4px 0">
+        Link to source code
+      </a>
+    </div>
+  </footer>
+</div>
