--- a/src/storage-service-client/src/app/features/details/details-list/details-list.html
+++ b/src/storage-service-client/src/app/features/details/details-list/details-list.html
@@ -1,1 +1,53 @@
-<p>details-list works!</p>
+<div class="details-table__wrapper">
+  <table mat-table [dataSource]="details" class="details-table">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nomenclatureCode">
+      <th mat-header-cell *matHeaderCellDef>Nomenclature code</th>
+      <td mat-cell *matCellDef="let element"> {{ element.nomenclatureCode }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="count">
+      <th mat-header-cell *matHeaderCellDef>Count</th>
+      <td mat-cell *matCellDef="let element"> {{ element.count }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="storekeeper">
+      <th mat-header-cell *matHeaderCellDef>Storekeeper</th>
+      <td mat-cell *matCellDef="let element"> {{ element.storekeeper?.fullName || 'Не указан' }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="createdAtDate">
+      <th mat-header-cell *matHeaderCellDef>Creation date</th>
+      <td mat-cell *matCellDef="let element"> {{ element.createdAtDate | date }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton="elevated" (click)="onDeleteItemClick(element.id)">
+          <mat-icon fontIcon="delete"></mat-icon>
+          <span>Delete</span>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+<div class="pagination__wrapper">
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+    aria-label="Select page">
+  </mat-paginator>
+</div>
