--- a/src/storage-service-client/src/app/shared/components/navbar/navbar.scss
+++ b/src/storage-service-client/src/app/shared/components/navbar/navbar.scss
@@ -4,6 +4,7 @@
   width: fit-content;
   background-color: antiquewhite;
   border-radius: 2rem;
+  box-shadow: 0 0.125rem 0.375rem rgba(0, 0, 0, 0.15);
 
   &__wrapper {
     display: flex;
@@ -13,7 +14,7 @@
   }
 
   &__button {
-    font-size: 1.5rem !important;
+    font-size: 1.5rem;
     margin: 0 0.125rem;
   }
 }
