--- a/src/storage-service-client/src/app/features/details/details-list/details-list.scss
+++ b/src/storage-service-client/src/app/features/details/details-list/details-list.scss
@@ -1,5 +1,5 @@
 .details-table {
-  min-width: 90%;
+  min-width: 95%;
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -10,13 +10,11 @@
 
   th {
     font-size: 1.25rem;
+    padding: 0.75rem 0.75rem;
   }
 
   td {
     font-size: 1rem;
-  }
-
-  th, td {
     padding: 0.75rem 0.75rem;
   }
 }
