--- a/src/storage-service-client/src/app/features/storekeepers/storekeepers-list/storekeepers-list.html
+++ b/src/storage-service-client/src/app/features/storekeepers/storekeepers-list/storekeepers-list.html
@@ -1,1 +1,33 @@
-<p>storekeepers-list works!</p>
+<div class="storekeepers-table__wrapper">
+  <table mat-table [dataSource]="storekeepers" class="storekeepers-table">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fullName">
+      <th mat-header-cell *matHeaderCellDef>Full name</th>
+      <td mat-cell *matCellDef="let element"> {{ element.fullName }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <button matButton="elevated" (click)="onDeleteItemClick(element.id)">
+          <mat-icon fontIcon="delete"></mat-icon>
+          <span>Delete</span>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
+<div class="pagination__wrapper">
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+    aria-label="Select page">
+  </mat-paginator>
+</div>
