--- a/src/storage-service-client/src/app/features/details/details-list/details-list.html
+++ b/src/storage-service-client/src/app/features/details/details-list/details-list.html
@@ -1,5 +1,5 @@
 <div class="details-table__wrapper">
-  <table mat-table [dataSource]="details" class="details-table">
+  <table mat-table [dataSource]="details()" class="details-table">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
       <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
@@ -47,6 +47,10 @@
 <div class="pagination__wrapper">
   <mat-paginator
     [pageSizeOptions]="[5, 10, 20]"
+    [length]="totalCount()"
+    [pageSize]="pageSize()"
+    [pageIndex]="pageIndex()"
+    (page)="onPageChange($event)"
     showFirstLastButtons
     aria-label="Select page">
   </mat-paginator>
