--- a/src/storage-service-client/src/app/features/storekeepers/storekeepers-list/storekeepers-list.html
+++ b/src/storage-service-client/src/app/features/storekeepers/storekeepers-list/storekeepers-list.html
@@ -10,6 +10,11 @@
       <td mat-cell *matCellDef="let element"> {{ element.fullName }} </td>
     </ng-container>
 
+    <ng-container matColumnDef="detailsCount">
+      <th mat-header-cell *matHeaderCellDef>Details count</th>
+      <td mat-cell *matCellDef="let element"> {{ element.detailsCount }} </td>
+    </ng-container>
+
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
